--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,11 @@ node_modules/
 .parcel-cache/
 dist/
 .env
-.DS_Store
 coverage/
 .vscode/
 *.sketch
-*.xd
 *.fig
+*.xd
+.DS_Store
+.prettierignore
+README-template.md
