--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "frontend-challenge",
+  "name": "react template",
   "version": "1.0.0",
-  "description": "This is a solution to a Frontend Mentor challenge",
+  "description": "react template",
   "scripts": {
     "dev": "parcel src/index.html",
     "build": "parcel build src/index.html",
     "format": "prettier --ignore-path ./.gitignore --write \"./**/*.{html,json,js,ts,css,scss}\"",
     "format:check": "prettier --ignore-path ./.gitignore --check \"./**/*.{html,json,js,ts,css,scss}\""
   },
+  "author": "Miguel Zapata",
+  "license": "Apache-2.0",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.7.0",
     "parcel": "^2.7.0",
